feat: add knowledge index provider management code
