# src/common/provider/dto/test-connection-respose.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsNumber } from "class-validator";
+
+export class TestConnectionResponseDto {
+  @ApiProperty()
+  @IsNumber()
+  duration!: number;
+
+  constructor(duration: number) {
+    this.duration = duration;
+  }
+}
