# src/modules/knowledge-index/dto/test-knowledge-index-connection.dto.ts
@@ -1,0 +1,19 @@
+import { ApiPropertyOptional, PickType } from "@nestjs/swagger";
+import { IsOptional, IsUUID } from "class-validator";
+
+import { CreateKnowledgeIndexDto } from "./create-knowledge-index.dto";
+
+export class TestKnowledgeIndexConnectionDto extends PickType(CreateKnowledgeIndexDto, ["provider", "config"] as const) {
+  @ApiPropertyOptional({
+    description:
+      "When editing, merges omitted encrypted config fields from this knowledge index",
+  })
+  @IsOptional()
+  @IsUUID()
+  knowledgeIndexId?: string;
+
+  constructor(data?: TestKnowledgeIndexConnectionDto) {
+    super();
+    if (data) Object.assign(this, data);
+  }
+}
